--- a/views/coaches/career_coach.hbs
+++ b/views/coaches/career_coach.hbs
@@ -21,17 +21,21 @@
 
 <section>
   <div>
-    <h1>Stylist Coach</h1>
+    <h1>Career Coach</h1>
     <h2>Description:</h2>
     <p>
-      "A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget"
+      "Career coaching can help you with your current job, establish your professional goals and support you in making a career change. The aim of career coaching is to help you understand what you want, the skills you need and how you can develop. A career coach will support you in making these initial steps, setting you on your way to a more fulfilling working life."
     </p>
     <h2>Services:</h2>
     <ul>
-      <li>Personal shopping</li>
-      <li>Relooking</li>
-      <li>Closet edit</li>
-      <li>Beauty Tips</li>
+      <li>Career exploration</li>
+      <li>Interviewing skills and confidence building</li>
+      <li>Creative job search strategies</li>
+      <li>Resume and cover letter writing</li>
+      <li>Career, personality and strengths assessments</li>
+      <li>Personal marketing and branding</li>
+      <li>Evaluating prospective employers</li>
+      <li>Salary negotiations</li>
     </ul>
      <button>
       <a href="/create-reviews">Add a review</a>
@@ -41,7 +45,7 @@
     </button>
   </div>
   <div>
-    <img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGVyc29uYWwlMjBzaG9wcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+   <img src="https://media.istockphoto.com/photos/young-bearded-businessman-sitting-on-desk-and-posing-picture-id1322913815?b=1&k=20&m=1322913815&s=170667a&w=0&h=rvURoK1t_rjAf09De0F5v6L9_wgJrUuZK_cw3vjPgDM="> 
   </div>
 </section>
 
@@ -49,16 +53,16 @@
 
 <section>
 <div>
-  <img src="https://images.unsplash.com/photo-1595475716260-0f2c35f5a40f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fHN0eWxpc3R8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60">
+  <img src="https://images.unsplash.com/photo-1523287562758-66c7fc58967f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aGFwcHklMjB3b3JrZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60">
 </div>
 <div>
-    <h1>Gloria</h1>
+    <h1>Simon</h1>
     <p>
-      "I have been a Style Coach for the last 10 years and graduated from ESMOD Paris. I started my career as stylist for BALMAIN and attended several fashion weeks. After an interesting career in fashion, I wanted a new challenge: Helping people feeling better in their daily outfit"
+      "After graduating from a Master 2 in HR at INSEEC Paris, I decided to pursue another degree in coaching. For the last 2 years I have been coaching Managers in a professional environment but also emmployees willing to grow their career. Career coaching is there to helps you improve your career but also be on another level of skills"
     </p>
     <h2>Free tip:</h2>
     <p class="coachp">
-      "Wearing high-waisted clothes will improve your figure !"
+      "To achieve a goal, stay focus and organize in stages !"
     </p>
      <button>
       <a href="/book-session">Book a session</a>
