--- a/views/coaches/life_coach.hbs
+++ b/views/coaches/life_coach.hbs
@@ -21,17 +21,18 @@
 
 <section>
   <div>
-    <h1>Stylist Coach</h1>
+    <h1>Life Coach</h1>
     <h2>Description:</h2>
     <p>
-      "A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget"
+      "If you are wanting to explore transitioning toward a major life change, a Life Coach can help you acheiving this goal by using coaching tools."
     </p>
     <h2>Services:</h2>
     <ul>
-      <li>Personal shopping</li>
-      <li>Relooking</li>
-      <li>Closet edit</li>
-      <li>Beauty Tips</li>
+      <li>Create a vision for your life</li>
+      <li>Identify your values, strengths and goals</li>
+      <li>Create an efficient time management system</li>
+      <li>Establish work/life balance</li>
+      <li>Manage stress</li>
     </ul>
      <button>
       <a href="/create-reviews">Add a review</a>
@@ -41,7 +42,7 @@
     </button>
   </div>
   <div>
-    <img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGVyc29uYWwlMjBzaG9wcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+   <img src="https://media.istockphoto.com/photos/smiling-businesswoman-looking-at-camera-webcam-make-conference-call-picture-id1129638608?b=1&k=20&m=1129638608&s=170667a&w=0&h=wqw8d1LJKd7wENwJrzvdQOZqtSLzpMutMQTjCFWeIrk="> 
   </div>
 </section>
 
@@ -49,16 +50,16 @@
 
 <section>
 <div>
-  <img src="https://images.unsplash.com/photo-1595475716260-0f2c35f5a40f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fHN0eWxpc3R8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60">
+  <img src="https://images.unsplash.com/photo-1484627147104-f5197bcd6651?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bGlmZSUyMGNvYWNofGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
 </div>
 <div>
-    <h1>Gloria</h1>
+    <h1>Maria</h1>
     <p>
-      "I have been a Style Coach for the last 10 years and graduated from ESMOD Paris. I started my career as stylist for BALMAIN and attended several fashion weeks. After an interesting career in fashion, I wanted a new challenge: Helping people feeling better in their daily outfit"
+      "3 years as a Psychologist helped to transition easily to a Life Coach career. Coaching people to improve their mindset or living conditions is meaningful. In a world where stress, time and confidence dictate your life, you need to learn how to deal with those things and sometimes make the changes to grow. My role as a Life Coach is to accompany you to realise your goal."
     </p>
     <h2>Free tip:</h2>
     <p class="coachp">
-      "Wearing high-waisted clothes will improve your figure !"
+      "Discomfort leads to growth. Comfort leads to comfort !"
     </p>
      <button>
       <a href="/book-session">Book a session</a>
