--- a/views/coaches/sport_coach.hbs
+++ b/views/coaches/sport_coach.hbs
@@ -21,17 +21,19 @@
 
 <section>
   <div>
-    <h1>Stylist Coach</h1>
+    <h1>Sport Coach</h1>
     <h2>Description:</h2>
     <p>
-      "A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget"
+      "Sport Coaches design custom exercise routines to improve strength, mobility, and endurance. Often found at gyms and equipped training center, you can book some personal trainings and follow a specific training program adapted to your goals. Some Sport Coaches can have the double skill in training and diet."
     </p>
     <h2>Services:</h2>
     <ul>
-      <li>Personal shopping</li>
-      <li>Relooking</li>
-      <li>Closet edit</li>
-      <li>Beauty Tips</li>
+      <li>Fitness</li>
+      <li>Boxing</li>
+      <li>Crossfit</li>
+      <li>Bodybuilding</li>
+      <li>Personal training program</li>
+      <li>Diet program</li>
     </ul>
      <button>
       <a href="/create-reviews">Add a review</a>
@@ -41,24 +43,24 @@
     </button>
   </div>
   <div>
-    <img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGVyc29uYWwlMjBzaG9wcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+   <img src="https://images.unsplash.com/photo-1598136490929-292a0a7890c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8Mnw1NDM5OTA4Nnx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60">
   </div>
 </section>
 
 
 
 <section>
-<div>
-  <img src="https://images.unsplash.com/photo-1595475716260-0f2c35f5a40f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjB8fHN0eWxpc3R8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60">
+<div>  
+   <img src="https://media.istockphoto.com/photos/early-30s-male-athlete-doing-renegade-row-pushups-at-gym-picture-id1282804431?b=1&k=20&m=1282804431&s=170667a&w=0&h=HNM3n7HaVqtHFizQUCXYM9ELMdVa5yUqPDyEAJ4Zss0=">
 </div>
 <div>
-    <h1>Gloria</h1>
+    <h1>Daniel</h1>
     <p>
-      "I have been a Style Coach for the last 10 years and graduated from ESMOD Paris. I started my career as stylist for BALMAIN and attended several fashion weeks. After an interesting career in fashion, I wanted a new challenge: Helping people feeling better in their daily outfit"
+      "I graduated from STAPS and have been a professional boxer for 5 years. Sport is a real discipline and also a lifestyle. Helping people accomplish their personal goal, such as losing weight or preparing a competition is great. I had the opportunity to train professional competitors but also people with health problems needing to eat healthier food and exercise"
     </p>
     <h2>Free tip:</h2>
     <p class="coachp">
-      "Wearing high-waisted clothes will improve your figure !"
+      "To lose weight, workout on a regular basis with cardio exercises !"
     </p>
      <button>
       <a href="/book-session">Book a session</a>
