--- a/views/create-reviews.hbs
+++ b/views/create-reviews.hbs
@@ -1,25 +1,31 @@
+<link rel="stylesheet" href="/stylesheets/create-reviews.css" />
 
-<h2> this is the review page! please leave your reviews!! 🐱</h2>
+<div class="book-container">
+  <img class="book-class" src="images/class.jpg" alt="book-class-image" />
+  <h1 class="top-letter">Reviews from our clients! </h1>
+</div>
 
+<div class="body-container">
 
-<form action="/create-reviews" method="POST">
-    <h2>Create the reviews!!</h2>
-    {{!-- <label for="date">Date:</label>
-    <input id ="date" type="date">  --}}
+  <form action="/create-reviews" method="POST">
+    {{! <label for="date">Date:</label>
+    <input id ="date" type="date">  }}
 
-{{!--{{#each coaches}} --}}
+    {{!--{{#each coaches}} --}}
 
-<label for="category">Category:</label>
-    <select name="category" id="category">
+    <label for="category">Category:</label>
+    <div class="select">
+      <select name="category" id="category">
         <option value="life">Life</option>
         <option value="sport">Sport</option>
         <option value="career">Career</option>
         <option value="style">Style</option>
-    </select>
-    
+      </select>
+    </div>
 
     <label for="location">Location:</label>
-    <select name="location" id="locations">
+    <div class="select">
+      <select name="location" id="locations">
         <option value="Paris">Paris</option>
         <option value="Nantes">Nantes</option>
         <option value="Lyon">Lyon</option>
@@ -27,105 +33,27 @@
         <option value="Bordeaux">Bordeaux</option>
         <option value="Lille">Lille</option>
         <option value="Marseille">Marseille</option>
-    </select>
+      </select>
+    </div>
 
-            <label>
-        Reviews:
-        <input type="text" name="text" />
+    <label>
+      Reviews:
+      <input type="text" name="text" />
     </label>
 
     <button> Create the reviews</button>
-</form>
+  </form>
 
-
-<ul>
+  <ul>
     {{#each reviews}}
-        <p>Category:{{this.category}}</p>
-        <p>Place:{{this.location}}</p>
-        <p>Reviews: {{this.text}}</p>
-        <p>Coach name:{{this.coach.name}}</p>
-        <p>Username:{{this.user.email}}</p>
-
-
+      <article class="service-box">
+        <p>- Category:{{this.category}}</p>
+        <p>- Place:{{this.location}}</p>
+        <p>- Reviews: {{this.text}}</p>
+        <p>- Coach name:{{this.coach.name}}</p>
+        <p>- Username:{{this.user.email}}</p>
+      </article>
     {{/each}}
 
-</ul>
-
-
-
-<!--
-
-    <label for="coach">coach:</label>
-    <select name="coach" id="coach">
-        <option value="beyonce">Beyonce</option>
-        <option value="kardelen">Kardelen</option>
-        <option value="oprah">Oprah</option>
-        <option value="tom-cruise">Tom cruise</option>
-    </select>
-
-        -->
-    
-    
-
-
-
-<!--
-<script src="https://use.fontawesome.com/a6f0361695.js"></script>
-
-    <h2>Write a review✏️  </h2>
-
-<form id="feedback" action="">
-    <div class="pinfo">Your personal info</div>
-
-<div class="form-group">
-    <div class="review-containter">
-        <div class="input-group">
-            <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-    <input name="email" type="email" class="form-control" placeholder="john.doe@yahoo.com">
-    </div>
-    </div>
-    </div>
-
-
-<div class="pinfo">Date of courses</div>
-<div class="form-group">
-    <div class="review-containter">
-    <div class="input-group">
-    <span class="input-group-addon"><i class="fa fa-globe"></i></span>
-    <input  name="date" placeholder="date of courses" class="form-control"  type="date">
-    </div>
-    </div>
+  </ul>
 </div>
-
-<div class="pinfo">Rate our overall classes.</div>
-
-    <div class="form-group">
-    <div class="review-containter">
-    <div class="input-group">
-    <span class="input-group-addon"><i class="fa fa-heart"></i></span>
-    <select class="form-control" id="rate">
-        <option value="1star">1</option>
-        <option value="2stars">2</option>
-        <option value="3stars">3</option>
-        <option value="4stars">4</option>
-        <option value="5stars">5</option>
-    </select>
-    </div>
-    </div>
-</div>
-
-    <div class="pinfo">Write your feedback.</div>
-
-<div class="form-group">
-    <div class="review-containter">
-    <div class="input-group">
-    <span class="input-group-addon"><i class="fa fa-pencil"></i></span>
-    <textarea class="form-control" id="review" rows="3"></textarea>
-    </div>
-    </div>
-</div>
-<button type="submit" class="btn btn-primary">Send a review ✏️</button>
-
-</form>
-
---!>
