--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,16 +1,33 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{title}}</title>
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
+  <!--Nav bar -->
+  <header>
+    <div>
+      <div>
+        <img class="logo" src="images/logo.svg" alt="logo" />
+      </div>
+      <a href="/"><span>My coach</span></a>
+      <nav class="nav-bar">
+        <ul class="nav-bar-ul">
+          <li><a href="#"> Coaches </a></li>
+          <li><a href="#"> Reviews </a></li>
+          <li><a href="/signup"> Signup </a></li>
+          <li> <a href="/login">Login</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  {{{body}}}
+  <body>
 
-  <script src="/javascripts/script.js"></script>
-</body>
+    {{{body}}}
+
+    <script src="/javascripts/script.js"></script>
+  </body>
 </html>
