--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,47 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap');
-
-
-/*NAV BAR*/
-header > div {
-  background-color:#042F4B;
-    padding: 0 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    border-bottom: 1px solid lightgray;
-  }
-  
-  span{
-    display: inline-block;
-    font-size:20px;
-    color: white;
-  }
-
-  nav {
-    width: 600px;
-  }
-  
-  nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  nav a {
-    text-decoration: none;
-    color:white;
-  }
-  
-  .logo {
-    padding:20px;
-    width: 30px;
-
-  }
-
 body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
@@ -53,5 +9,39 @@ a {
 
 a:link {
   text-decoration: none; }
+
+/*NAV BAR*/
+header > div {
+  background-color: #042F4B;
+  padding: 0 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  border-bottom: 1px solid lightgray; }
+
+span {
+  display: inline-block;
+  font-size: 20px;
+  color: white; }
+
+nav {
+  width: 600px; }
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+nav a {
+  text-decoration: none;
+  color: white; }
+
+.logo {
+  padding: 20px;
+  width: 30px; }
 
 /*# sourceMappingURL=style.css.map */
