add reviews photo

--- a/views/create-reviews.hbs
+++ b/views/create-reviews.hbs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/stylesheets/create-reviews.css" />
 
 <div class="book-container">
-  <img class="book-class" src="images/class.jpg" alt="book-class-image" />
+  <img class="book-class" src="images/reviews.jpg" alt="book-class-image" />
   <h1 class="top-letter">Reviews from our clients! </h1>
 </div>
 
