--- a/public/stylesheets/create-reviews.css
+++ b/public/stylesheets/create-reviews.css
@@ -65,7 +65,7 @@ position:relative;
   box-shadow:20px;
   border-style:0.5px;
   color:#042F4B;
-  box-shadow: 4px 4px 2px #cbced1;
+  box-shadow: 4px 4px 2px #ecf0f3;
 }
 
 
@@ -178,49 +178,12 @@ select::-ms-expand {
     border-color:#042F4B;
   }
 
-/*form for the courses*/
-
-#structure > div {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.container {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 75px 0;
-}
-
-.service-box {
-    font-size: 1.7em;
-    text-align: center;
-    border: 2px solid #EEE;
-    border-radius: 20px;
-    box-sizing: border-box;
-    box-shadow: 2px 2px 10px 0 #EEE;
-    margin-top: 50px;
-    background-color:#042F4B;
-    color:white;
-    padding: 10px;
-    width: 40%;
-}
-
-.bookeda{
-    font-size:20px;
-    font-weight: bold;
-}
-
 /**/
 
 
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-}
-
-body {
-  background: #F2F3EB;
 }
 
 button {
@@ -232,7 +195,7 @@ button, select {
 }
 
 button, input, select, textarea {
-  color: #5A5A5A;
+  color: #042F4B;
   font: inherit;
   margin: 0;
 }
@@ -246,7 +209,7 @@ textarea {
 }
 
 #container {
-  border: solid 3px #474544;
+  border: solid 3px #042F4B;
   max-width: 768px;
   margin: 60px auto;
   position: relative;
@@ -258,7 +221,7 @@ form {
 }
 
 h1 {
-  color: #474544;
+  color: #042F4B;
   font-size: 32px;
   font-weight: 700;
   letter-spacing: 7px;
@@ -267,7 +230,7 @@ h1 {
 }
 
 .underline {
-  border-bottom: solid 2px #474544;
+  border-bottom: solid 2px #042F4B;
   margin: -0.512em auto;
   width: 80px;
 }
@@ -279,7 +242,7 @@ h1 {
 
 .icon {
   display: block;
-  fill: #474544;
+  fill: #042F4B;
   height: 50px;
   margin: 0 auto;
   width: 50px;
@@ -293,8 +256,8 @@ h1 {
 input[type='text'], [type='email'], select, textarea {
 	background: none;
   border: none;
-	border-bottom: solid 2px #474544;
-	color: #474544;
+	border-bottom: solid 2px #042F4B;
+	color: #042F4B;
 	font-size: 1.000em;
   font-weight: 400;
   letter-spacing: 1px;
@@ -343,10 +306,6 @@ select::-ms-expand {
   width: 100%;
 }
 
-.telephone {
-  width: 100%;
-}
-
 textarea {
 	line-height: 150%;
 	height: 150px;
@@ -355,11 +314,11 @@ textarea {
 }
 
 ::-webkit-input-placeholder {
-	color: #474544;
+	color: #042F4B;
 }
 
 :-moz-placeholder { 
-	color: #474544;
+	color: #042F4B;
 	opacity: 1;
 }
 
@@ -374,8 +333,8 @@ textarea {
 
 #form_button {
   background: none;
-  border: solid 2px #474544;
-  color: #474544;
+  border: solid 2px #042F4B;
+  color: #042F4B;
   cursor: pointer;
   display: inline-block;
   font-family: 'Helvetica', Arial, sans-serif;
@@ -392,7 +351,7 @@ textarea {
 }
 
 #form_button:hover {
-  background: #474544;
+  background: #042F4B;
   color: #F2F3EB;
 }
 
@@ -434,4 +393,41 @@ textarea {
   input[type='text'], [type='email'], select, textarea {
     font-size: 0.875em;
   }
+}
+
+
+
+  /*reviews */
+  #forms{
+    display:flex;
+    flex-direction:row;
+    align-content: center;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+  .service-box {
+    font-size: 1.7em;
+    text-align: center;
+    border: 4px solid #ecf0f3;
+    border-radius: 10px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 10px 0 #ecf0f3;
+    margin-top: 50px;
+    background-color:#042F4B;
+    color:white;
+    padding: 10px;
+    width: 87%;
+}
+
+.service-box:hover {
+    background-color:ecf0f3;
+    color: #042F4B;
+    border-color:#042F4B;
+    border: 3px, solid #042F4B;
+}
+
+.underline-box {
+    border-bottom: solid 3px #042F4B;
+    margin: -0.512em auto;
+    width: 40px;
 }
