--- a/public/stylesheets/not-found.css
+++ b/public/stylesheets/not-found.css
@@ -4,7 +4,7 @@
 /*Body*/
 
 body{
-  margin: 0;
+    margin: 0;
   width: 100vw;
   height: 100vh;
   background: #ecf0f3;
@@ -25,11 +25,7 @@ h2{
 }
 
 
-
 /*basic css structure*/
-body{
-    background-color: #ecf0f3;
-}
 
 h1 {
     color: #042F4B;
@@ -46,21 +42,15 @@ h2{
 }
 
 /*img*/
-.book-class{
+.no-route{
     width: unset;
-    height:30px;
+    height:500px;
     position: 0, 0;
     background-repeat: no-repeat;
     padding-top: 5%;
+    padding-bottom: 5%;
     position: relative
     
-}
-
-.no-route{
-    width: 50%;
-    height:0%;
-    padding-top:30px;
-    padding-bottom: 30px;
 }
 
 .user-created-container{
