--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,74 @@
-<h1>Welcome to COACH ME</h1>
-<P>{{title}}</P>
+    <link rel="stylesheet" href="/stylesheets/home.css" />
+
+  <!--Section 1-->
+    <section class="first-section">
+      <div class ="container">
+      <heading>
+  <h1 class="build"> Welcome to CoachMe </h1>
+ </heading>
+
+  <article class="first-article">
+    <p>Essential JavaScript development tools that help you<br>
+       go to market faster and build powerful applications<br>
+        using modern open souce code. </p>
+ </article>
+
+ <div class="second-button">
+<a class="booksessions" href="/book-session"> Book a session </a>
+<a class="jointoday" href="/signup">Join today </a>
+</div>
+
+</section>
+
+
+<!--Section 2-->
+<section class="second-section">
+    <div class="second-container">
+        <img src= "/images/logo_small.png" alt="triangle hexagon">
+        <h2 class="second-title"> Discover the best version of you with us! </h2> <br>
+ <p>
+    npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers <br>
+     already use it. Your company depends on it. Create an Org and get more out of the tools your <br>
+      team already knows and loves. 
+ </p>
+ <br>
+</div>
+
+<!-----section 3------->
+<section class="third-section">
+  <div class="third-container">
+<div class="first-div">
+    <img src="images/zero-configuration.svg" alt= "Zero configuration"/>
+    <H3>Zero configuration</H3>
+<p> Create an org, add your team, and start collaborating. Nothing to configure, set up or manage. </p>
+    </div>
+
+<div class="second-div">
+    <img src="images/team-management.svg" alt="Team management" />
+    <H3>Team Management</H3>
+    <p> Control who has access to what modules within your team namespace using straightforward team management capabilites. </p>
+</div>
+
+<div class="third-div"> 
+    <img src="images/familiar-features.svg" alt="Familiar features" />
+    <H3>Familiar features </H3>
+    <p> npm Orgs has 100% parity with all the public npm registry features your developers alreaady use. </p>
+</div>
+
+<div class ="fourth-div">
+    <img src="images/npm-audit.svg" alt="Npm audit" />
+    <H3>npm audit</H3>
+    <p> Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.  </p>
+</div>
+</div>
+
+
+<div class="last-button">
+  <a href="#"> Create an Org </a>
+</div>
+</section>
+
+</body>
 
 
 <button>
