--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,6 +19,11 @@
           <li><a href="/create-reviews"> Reviews </a></li>
           <li><a href="/signup"> Signup </a></li>
           <li> <a href="/login">Login</a></li>
+          <li>
+            <form id="logout-form" action="/logout" method="POST">
+              <button class="logout-btn">Logout</button>
+            </form>
+          </li>
         </ul>
       </nav>
     </div>
