--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,7 @@
           <li> <a href="/login">Login</a></li>
           <li>
             <form id="logout-form" action="/logout" method="POST">
-              <button class="logout-btn">Logout</button>
+              <button id="logout-btn">Logout</button>
             </form>
           </li>
         </ul>
