--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -3,7 +3,7 @@
 /*****Section 1******/
 
 .first-section {
-    height:600px;
+    height:650px;
     font-family: 'Poppins';
     background-color:#ecf0f3;
 }
@@ -14,9 +14,9 @@
   }
   
   .build {
-    font-size: 5rem;
+    font-size: 4.5rem;
     line-height: 1.25;
-    margin: .67em 0;
+    margin: 80px 0px;
     text-align: center;
   }
   
@@ -72,7 +72,7 @@
   }
   
   .second-container img  {
-    padding-top:30px;
+    padding-top:80px;
     display: block;
     margin-left:auto;
     margin-right:auto;
@@ -97,14 +97,25 @@
     display:flex;
     flex-basis: 0;
     flex: 1 1 0px;
-    padding:10px;
+    padding:70px 150px;
   }
+
+  /*
+  .third-container{
+    display:flex;
+    flex-basis: 0;
+    flex: 1 1 0px;
+    algin-content:space-around;
+    justify-cotent:space-evenly;
+    flex-wrap:wrap;
+    flex-direction:column;
+  }
+  */
   
   .third-container img {
     width: 50px;
     height: 50px;
     padding-right: 100px;
-  
   }
   
   .third-container h3 {
@@ -117,8 +128,7 @@
     line-height: 1.25;
   }
   
-  /*******4 div elements*******/
-  
+  /******* 4 div elements*******/
   .first-div {
     margin: 30px;
   }
