--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -54,3 +54,12 @@ header > div {
   padding:20px;
   width: 30px;
   }
+
+  #logout-btn{
+    background-color:#042F4B;
+    border:none;
+    color:white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    padding-top:18px;
+  }
