--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,72 +5,84 @@
       <div class ="container">
       <heading>
   <h1 class="build"> Welcome to CoachMe </h1>
- </heading>
+  </heading>
 
   <article class="first-article">
-    <p>Essential JavaScript development tools that help you<br>
-       go to market faster and build powerful applications<br>
-        using modern open souce code. </p>
- </article>
+    <p>Put simply, coaching is a process that aims to improve performance and<br>
+    and focuses on the 'here and now' rather than on the distant past or future.<br>
+        ... Coaching is unlocking a person's potential to maximise their own performance. </p>
+        </article>
 
- <div class="second-button">
+<div class="second-button">
 <a class="booksessions" href="/book-session"> Book a session </a>
 <a class="jointoday" href="/signup">Join today </a>
 </div>
-
 </section>
-
 
 <!--Section 2-->
 <section class="second-section">
     <div class="second-container">
-        <img src= "/images/logo_small.png" alt="triangle hexagon">
-        <h2 class="second-title"> Discover the best version of you with us! </h2> <br>
- <p>
+        <img src= "/images/motivation.png" alt="motivation-logo">
+        <h2 class="second-title"> Discover the best version of yourself! </h2> <br>
+        <p>
+          CoachMe is the 
     npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers <br>
-     already use it. Your company depends on it. Create an Org and get more out of the tools your <br>
+    already use it. Your company depends on it. Create an Org and get more out of the tools your <br>
       team already knows and loves. 
- </p>
- <br>
+      </p>
+      <br>
 </div>
 
 <!-----section 3------->
 <section class="third-section">
   <div class="third-container">
+
 <div class="first-div">
-    <img src="images/zero-configuration.svg" alt= "Zero configuration"/>
+    <img src="/images/career-choice.png" alt= "career choice"/>
     <H3>Zero configuration</H3>
+    <button class="coach-btn">
+    <a href="/style_coach">Go to check the style coaches! </a>
+  </button>
 <p> Create an org, add your team, and start collaborating. Nothing to configure, set up or manage. </p>
     </div>
 
 <div class="second-div">
-    <img src="images/team-management.svg" alt="Team management" />
+    <img src="/images/spa.png" alt="life goal" />
     <H3>Team Management</H3>
+    <button class="coach-btn">
+    <a href="/life_coach">Go to check the life coaches! </a>
+  </button>
     <p> Control who has access to what modules within your team namespace using straightforward team management capabilites. </p>
 </div>
 
 <div class="third-div"> 
-    <img src="images/familiar-features.svg" alt="Familiar features" />
+    <img src="/images/sport-equipment.png" alt="sport" />
     <H3>Familiar features </H3>
+    <button class="coach-btn">
+    <a href="/sport_coach">Go to check the sport coaches! </a>
+  </button>
     <p> npm Orgs has 100% parity with all the public npm registry features your developers alreaady use. </p>
 </div>
 
 <div class ="fourth-div">
-    <img src="images/npm-audit.svg" alt="Npm audit" />
-    <H3>npm audit</H3>
+    <img src="/images/makeover.png" alt="style" />
+    <H3>Style</H3>
+      <button class="coach-btn">
+    <a href="/style_coach">Go to check the style coaches! </a>
+  </button>
     <p> Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.  </p>
 </div>
 </div>
 
 
 <div class="last-button">
-  <a href="#"> Create an Org </a>
+  <a href="#"> Discover </a>
 </div>
 </section>
 
 </body>
 
-
+<!--the old html
 <button>
 <a href="/book-session">Book a session!!</a>
 </button>
@@ -95,7 +107,8 @@
 <a href="/sport_coach">Go to check the sport coaches!</a>
 </button>
 
-
 <button>
 <a href="/life_coach">Go to check the sport coaches!</a>
 </button>
+
+-->
