--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,11 +24,8 @@
     <div class="second-container">
         <img src= "/images/motivation.png" alt="motivation-logo">
         <h2 class="second-title"> Discover the best version of yourself! </h2> <br>
-        <p>
-          CoachMe is the 
-    npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers <br>
-    already use it. Your company depends on it. Create an Org and get more out of the tools your <br>
-      team already knows and loves. 
+        <p>Good coaches believe that the individual always has the answer to their own problems <br> but understands that they may need help to find the answer. Fundamentally,
+        in coaching,<br> is helping the individual to improve their own performance: in other words, helping them to learn. 
       </p>
       <br>
 </div>
@@ -39,76 +36,118 @@
 
 <div class="first-div">
     <img src="/images/career-choice.png" alt= "career choice"/>
-    <H3>Zero configuration</H3>
+    <H3>Career Coach</H3>
     <button class="coach-btn">
-    <a href="/style_coach">Go to check the style coaches! </a>
+    <a class= "coach-a" href="/career_coach"> Meet Career Coach! </a>
   </button>
-<p> Create an org, add your team, and start collaborating. Nothing to configure, set up or manage. </p>
+<p> Create your new career road, join to your new team, and start collaborating. </p>
     </div>
 
 <div class="second-div">
-    <img src="/images/spa.png" alt="life goal" />
-    <H3>Team Management</H3>
-    <button class="coach-btn">
-    <a href="/life_coach">Go to check the life coaches! </a>
+  <img src="/images/makeover.png" alt="style" />
+    <H3>Style Coach</H3>
+      <button class="coach-btn">
+    <a class = "coach-a" href="/style_coach"> Meet Style Coach!</a>
   </button>
-    <p> Control who has access to what modules within your team namespace using straightforward team management capabilites. </p>
+    <p> Change your style as you've been dreamed of, we're ready to find your beauty inside of you.</p>
 </div>
 
 <div class="third-div"> 
     <img src="/images/sport-equipment.png" alt="sport" />
-    <H3>Familiar features </H3>
+    <H3>Sport Coach </H3>
     <button class="coach-btn">
-    <a href="/sport_coach">Go to check the sport coaches! </a>
+    <a class = "coach-a" href="/sport_coach">Meet Sport Coach!</a>
   </button>
-    <p> npm Orgs has 100% parity with all the public npm registry features your developers alreaady use. </p>
+    <p> Sport will be your everyday exercise that you'll enjoy. Discover the sport that fit you the most. </p>
 </div>
 
 <div class ="fourth-div">
-    <img src="/images/makeover.png" alt="style" />
-    <H3>Style</H3>
-      <button class="coach-btn">
-    <a href="/style_coach">Go to check the style coaches! </a>
+  <img src="/images/spa.png" alt="life goal" />
+    <H3>Life Coach</H3>
+    <button class="coach-btn">
+    <a class = "coach-a" href="/life_coach">Meet Life Coach!</a>
   </button>
-    <p> Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.  </p>
+    <p> Find your new joy with us. Your life will be changed with our life coaches. Find your new happiness.  </p>
 </div>
+
 </div>
 
 
 <div class="last-button">
-  <a href="#"> Discover </a>
+  <a href="/create-reviews"> Discover more </a>
 </div>
 </section>
 
-</body>
 
-<!--the old html
-<button>
-<a href="/book-session">Book a session!!</a>
-</button>
 
-<li id="to-right">
-    <a href="/signup">Signup</a> <span> | </span>
-    <a href="/login">Login</a> <span> | </span>
-    <form id="logout-form" action="/logout" method="POST">
-    <button>Logout</button>
-    </form>
-</li>
+<!-----section 4------->
+<section class="fourth-section">
+  <div class="fourth-container">
+<div class="fourth-first-div">
+    <h2>Career coach</h2>
+    <div class="underline">
+  </div>
 
-<button>
-<a href="/style_coach">Go to check the style coaches!</a>
-</button>
+<p>A career coach can help individuals research possible career options and search out job openings that match their career interests and they may work in schools, colleges, government agencies or in private practices.</p>
+    </div>
 
-<button>
-<a href="/career_coach">Go to check the career coaches!</a>
-</button>
+<div class="second-div">
+    <img src="/images/home-career.jpg" alt= "career choice"/>
+</div>
 
-<button>
-<a href="/sport_coach">Go to check the sport coaches!</a>
-</button>
 
-<button>
-<a href="/life_coach">Go to check the sport coaches!</a>
-</button>
+</div>
+</section>
 
--->
+<section class="fourth-section">
+  <div class="fourth-container">
+
+    <div class="second-div">
+    <img src="/images/home-career.jpg" alt= "career choice"/>
+</div>
+<div class="fourth-first-div">
+    <h2>Style coach</h2>
+    <div class="underline">
+  </div>
+
+<p>A career coach can help individuals research possible career options and search out job openings that match their career interests and they may work in schools, colleges, government agencies or in private practices.</p>
+    </div>
+</div>
+</section>
+
+
+<section class="fourth-section">
+  <div class="fourth-container">
+<div class="fourth-first-div">
+    <h2>Career coach</h2>
+    <div class="underline">
+  </div>
+
+<p>A career coach can help individuals research possible career options and search out job openings that match their career interests and they may work in schools, colleges, government agencies or in private practices.</p>
+    </div>
+
+<div class="second-div">
+    <img src="/images/home-career.jpg" alt= "career choice"/>
+</div>
+
+
+</div>
+</section>
+
+<section class="fourth-section">
+  <div class="fourth-container">
+
+    <div class="second-div">
+    <img src="/images/home-career.jpg" alt= "career choice"/>
+</div>
+<div class="fourth-first-div">
+    <h2>Style coach</h2>
+    <div class="underline">
+  </div>
+
+<p>A career coach can help individuals research possible career options and search out job openings that match their career interests and they may work in schools, colleges, government agencies or in private practices.</p>
+    </div>
+</div>
+</section>
+
+
