--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,14 +45,12 @@ nav a {
   padding: 20px;
   width: 30px; }
 
-
-#logout-btn{
-  background-color:#042F4B;
-  border:none;
-  color:white;
+#logout-btn {
+  background-color: #042F4B;
+  border: none;
+  color: white;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
-  padding-top:18px;
-}
+  padding-top: 18px; }
 
 /*# sourceMappingURL=style.css.map */
