homepage almost done

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,7 +38,7 @@
     <img src="/images/career-choice.png" alt= "career choice"/>
     <H3>Career Coach</H3>
     <button class="coach-btn">
-    <a class= "coach-a" href="/career_coach"> Meet Career Coach! </a>
+    <a class= "coach-a" href="/career_coach"> Check more </a>
   </button>
 <p> Create your new career road, join to your new team, and start collaborating. </p>
     </div>
@@ -47,7 +47,7 @@
   <img src="/images/makeover.png" alt="style" />
     <H3>Style Coach</H3>
       <button class="coach-btn">
-    <a class = "coach-a" href="/style_coach"> Meet Style Coach!</a>
+    <a class = "coach-a" href="/style_coach"> Check more </a>
   </button>
     <p> Change your style as you've been dreamed of, we're ready to find your beauty inside of you.</p>
 </div>
@@ -56,7 +56,7 @@
     <img src="/images/sport-equipment.png" alt="sport" />
     <H3>Sport Coach </H3>
     <button class="coach-btn">
-    <a class = "coach-a" href="/sport_coach">Meet Sport Coach!</a>
+    <a class = "coach-a" href="/sport_coach"> Check more </a>
   </button>
     <p> Sport will be your everyday exercise that you'll enjoy. Discover the sport that fit you the most. </p>
 </div>
@@ -65,7 +65,7 @@
   <img src="/images/spa.png" alt="life goal" />
     <H3>Life Coach</H3>
     <button class="coach-btn">
-    <a class = "coach-a" href="/life_coach">Meet Life Coach!</a>
+    <a class = "coach-a" href="/life_coach">Check more</a>
   </button>
     <p> Find your new joy with us. Your life will be changed with our life coaches. Find your new happiness.  </p>
 </div>
@@ -92,7 +92,7 @@
     </div>
 
 <div class="second-div">
-    <img src="/images/home-career.jpg" alt= "career choice"/>
+    <img src="/images/home-career.jpg" alt= "Career homepage photo"/>
 </div>
 
 
@@ -103,14 +103,15 @@
   <div class="fourth-container">
 
     <div class="second-div">
-    <img src="/images/home-career.jpg" alt= "career choice"/>
+          <img src="/images/style_page.jpg" alt= "Style homepage photo"/>
 </div>
 <div class="fourth-first-div">
     <h2>Style coach</h2>
     <div class="underline">
   </div>
 
-<p>A career coach can help individuals research possible career options and search out job openings that match their career interests and they may work in schools, colleges, government agencies or in private practices.</p>
+<p> 
+A Style Coach is more than a Personal Stylist - we are trained as Personal Stylists but also take a fully holistic Style Coaching approach helping people with their inner confidence as well as their outer style as requested. When inner and outer confidence combine together that is when true style shines through!.</p>
     </div>
 </div>
 </section>
@@ -119,15 +120,15 @@
 <section class="fourth-section">
   <div class="fourth-container">
 <div class="fourth-first-div">
-    <h2>Career coach</h2>
+    <h2>Sport coach</h2>
     <div class="underline">
   </div>
 
-<p>A career coach can help individuals research possible career options and search out job openings that match their career interests and they may work in schools, colleges, government agencies or in private practices.</p>
+<p>Coaches are responsible for planning, organising and delivering an appropriate range of sports activities and programmes for individuals and teams. Typical responsibilities include: teaching relevant skills, tactics and techniques and assisting with sports promotion/development..</p>
     </div>
 
 <div class="second-div">
-    <img src="/images/home-career.jpg" alt= "career choice"/>
+      <img src="/images/sport_page.jpg" alt= "Sport homepage photo"/>
 </div>
 
 
@@ -138,16 +139,33 @@
   <div class="fourth-container">
 
     <div class="second-div">
-    <img src="/images/home-career.jpg" alt= "career choice"/>
+    <img src="/images/life_page.jpg" alt= "Life homepage photo"/>
 </div>
 <div class="fourth-first-div">
-    <h2>Style coach</h2>
+    <h2>Life coach</h2>
     <div class="underline">
   </div>
 
-<p>A career coach can help individuals research possible career options and search out job openings that match their career interests and they may work in schools, colleges, government agencies or in private practices.</p>
+<p>A life coach is a type of wellness professional who helps people make progress in their lives in order to attain greater fulfillment. Life coaches aid their clients in improving their relationships, careers, and day-to-day lives. ... In creating these strategies, life coaches target your unique skills and gifts.</p>
     </div>
 </div>
 </section>
 
 
+<!--Footer-->
+
+<div class = "footer">
+      <div>
+        <img class="footer-logo" src="images/logo.svg" alt="logo" />
+      </div>
+      <a href="/"><span> © copyright 2022</span></a>
+      <nav class="nav-bar">
+        <ul class="nav-bar-ul">
+          <li><a href="https://www.instagram.com/"> Instagram </a></li>
+          <li><a href="https://twitter.com/"> Twitter </a></li>
+          <li> <a href="https://www.facebook.com/">Facebook</a></li>
+          <li> <a href="https://www.youtube.com/">Youtube</a></li>
+
+        </ul>
+      </nav>
+    </div>
