--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -5,6 +5,8 @@
 .first-section {
     height:650px;
     font-family: 'Poppins';
+    font-size:20px;
+
     background-color:#ecf0f3;
 }
 .container {
@@ -71,6 +73,11 @@
   text-align:center;
   }
   
+  .second-container p {
+    font-size:20px;
+
+  }
+
   .second-container img  {
     padding-top:80px;
     display: block;
@@ -83,6 +90,7 @@
   .second-title {
     text-align: center;
     font-weight: bold;
+    font-size: 25px;
     margin-left:auto;
     margin-right:auto;
     height:35px;
@@ -109,11 +117,13 @@
   .third-container h3 {
     text-align:left ;
     color:#042F4B ;
+    font-size:22px;
   }
   
   .third-container p {
     text-align:left;
     line-height: 1.25;
+
   }
   
   /******* 4 div elements*******/
@@ -147,6 +157,7 @@
   .coach-a{
     background-color:#042F4B;
     padding: 3px 10px;
+    font-size:15px;
 
   }
   .last-button {
@@ -170,6 +181,7 @@
   
   .fourth-section{
     background-color:#ecf0f3;
+    height:600px;
   }
 
   .fourth-container {
@@ -227,3 +239,40 @@
   border-bottom: solid 3px #042F4B;
   width: 50px;
 }
+
+/************footer*************/
+
+/*NAV BAR*/
+.footer {
+  background-color: #042F4B;
+  padding: 0 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  border-bottom: 1px solid lightgray; }
+
+.footer span {
+  display: inline-block;
+  font-size: 18px;
+  color: white;
+}
+
+.footer nav {
+  width: 600px; }
+
+.footer nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.footer nav a {
+  text-decoration: none;
+  color: white; }
+
+.footer-logo {
+  padding: 20px;
+  width: 30px; }
