--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
       <a href="/"><span>My coach</span></a>
       <nav class="nav-bar">
         <ul class="nav-bar-ul">
-          <li><a href=""> Coaches </a></li>
+          <li><a href="/coach"> Coaches </a></li>
           <li><a href="/create-reviews"> Reviews </a></li>
           <li><a href="/signup"> Signup </a></li>
           <li> <a href="/login">Login</a></li>
