coach page in process

--- a/views/coach.hbs
+++ b/views/coach.hbs
@@ -17,3 +17,54 @@
     </div>
     </div>
 </section>
+
+
+<section class="fifth-section">
+  <div class="fifth-container">
+    <div class="second-div">
+          <img src="/images/style_page.jpg" alt= "Style homepage photo"/>
+</div>
+<div class="fifth-first-div">
+    <h2>Style coach</h2>
+    <div class="underline">
+  </div>
+<p> 
+A Style Coach is more than a Personal Stylist - we are trained as Personal Stylists but also take a fully holistic Style Coaching approach helping people with their inner confidence as well as their outer style as requested. When inner and outer confidence combine together that is when true style shines through!.</p>
+    </div>
+</div>
+</section>
+
+
+
+<section class="fifth-section">
+  <div class="fifth-container">
+<div class="fifth-first-div">
+    <h2>Sport coach</h2>
+    <div class="underline">
+  </div>
+
+<p>Coaches are responsible for planning, organising and delivering an appropriate range of sports activities and programmes for individuals and teams. Typical responsibilities include: teaching relevant skills, tactics and techniques and assisting with sports promotion/development..</p>
+    </div>
+
+<div class="second-div">
+      <img src="/images/sport_page.jpg" alt= "Sport homepage photo"/>
+</div>
+</div>
+</section>
+
+
+<section class="fifth-section">
+  <div class="fifth-container">
+
+    <div class="second-div">
+    <img src="/images/life_page.jpg" alt= "Life homepage photo"/>
+</div>
+<div class="fifth-first-div">
+    <h2>Life coach</h2>
+    <div class="underline">
+  </div>
+
+<p>A life coach is a type of wellness professional who helps people make progress in their lives in order to attain greater fulfillment. Life coaches aid their clients in improving their relationships, careers, and day-to-day lives. ... In creating these strategies, life coaches target your unique skills and gifts.</p>
+    </div>
+</div>
+</section>
