--- a/views/coach.hbs
+++ b/views/coach.hbs
@@ -1,5 +1,17 @@
 <link rel="stylesheet" href="/stylesheets/coach.css" />
 
+<!--Htitle -->
+
+    <section class="first-section">
+      <div class ="container">
+      <heading>
+  <h2 class="build"> Meet our coaches! </h2>
+  </heading>
+<div class="second-button">
+<a class="booksessions" href="/book-session"> Book a session </a>
+</div>
+</section>
+
 
 <section class="fifth-section">
     <div class= "fifth-container">
@@ -10,7 +22,11 @@
         and search out job openings that match their career interests and they
         may work in schools, colleges, government agencies or in private
         practices.</p>
+            <div class="coach-button">
+<a class="meet-coach" href="/career_coach"> Meet career coach </a>
+</div>
     </div>
+
     <div class="second-div">
     <img src="/images/home-career.jpg" alt="Career homepage photo" />
     </div>
@@ -30,11 +46,12 @@
   </div>
 <p> 
 A Style Coach is more than a Personal Stylist - we are trained as Personal Stylists but also take a fully holistic Style Coaching approach helping people with their inner confidence as well as their outer style as requested. When inner and outer confidence combine together that is when true style shines through!.</p>
+     <div class="coach-button">
+<a class="meet-coach" href="/style_coach"> Meet style coach </a>
+</div>
     </div>
 </div>
 </section>
-
-
 
 <section class="fifth-section">
   <div class="fifth-container">
@@ -44,6 +61,9 @@ A Style Coach is more than a Personal Stylist - we are trained as Personal Styli
   </div>
 
 <p>Coaches are responsible for planning, organising and delivering an appropriate range of sports activities and programmes for individuals and teams. Typical responsibilities include: teaching relevant skills, tactics and techniques and assisting with sports promotion/development..</p>
+     <div class="coach-button">
+<a class="meet-coach" href="/sport_coach"> Meet sport coach </a>
+</div>
     </div>
 
 <div class="second-div">
@@ -65,6 +85,9 @@ A Style Coach is more than a Personal Stylist - we are trained as Personal Styli
   </div>
 
 <p>A life coach is a type of wellness professional who helps people make progress in their lives in order to attain greater fulfillment. Life coaches aid their clients in improving their relationships, careers, and day-to-day lives. ... In creating these strategies, life coaches target your unique skills and gifts.</p>
-    </div>
+    
+     <div class="coach-button">
+<a class="meet-coach" href="/life_coach"> Meet life coach </a>
+</div></div>
 </div>
 </section>
