coach pages en cours

--- a/views/coaches/career_coach.hbs
+++ b/views/coaches/career_coach.hbs
@@ -1,1 +1,43 @@
-<h2> This is the career coach page!!!!!🥝 </h2>
+    <link rel="stylesheet" href="/stylesheets/coach-details.css" />
+
+<section class="fifth-section">
+    <div class= "fifth-container">
+        <div class="fifth-first-div">
+                <h1>Style coach</h1>
+                <div class="underline"></div>
+        <p>A career coach can help individuals research possible career options
+        and search out job openings that match their career interests and they
+        may work in schools, colleges, government agencies or in private
+        practices.</p>
+            <div class="coach-button">
+<a class="meet-coach" href="/create-reviews"> See reviews</a>
+</div>
+    </div>
+
+    <div class="second-div">
+    <img src="/images/style-coach.jpg" alt="Career homepage photo" />
+    </div>
+    </div>
+    </div>
+</section>
+
+<section class="fifth-section">
+    <div class="fifth-container">
+    <div class="second-div">
+        <img src="/images/style_page.jpg" alt= "Style homepage photo"/>
+</div>
+<div class="fifth-first-div">
+    <h2>Style coach</h2>
+    <div class="underline">
+
+    </div>
+<p> 
+A Style Coach is more than a Personal Stylist - we are trained as Personal Stylists but also take a fully holistic Style Coaching approach helping people with their inner confidence as well as their outer style as requested. When inner and outer confidence combine together that is when true style shines through!.</p>
+     <div class="coach-button">
+<a class="meet-coach" href="/book-session"> Book a session </a>
+</div>
+    </div>
+</div>
+</section>
+
+
