--- a/views/index.hbs
+++ b/views/index.hbs
@@ -74,7 +74,7 @@
 
 
 <div class="last-button">
-  <a href="/create-reviews"> Discover more </a>
+  <a href="/coach"> Discover more </a>
 </div>
 </section>
 
