--- a/views/coach.hbs
+++ b/views/coach.hbs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/coach.css" />
 
-<!--Htitle -->
+<!--title -->
 
     <section class="first-section">
       <div class ="container">
