--- a/public/stylesheets/coach-details.css
+++ b/public/stylesheets/coach-details.css
@@ -1,3 +1,24 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+
+/*****Section 1******/
+
+.first-section {
+  height:200px;
+  font-family: 'Poppins';
+  font-size:20px;
+  background-color:yellow;
+}
+.container {
+  display:flex; 
+  flex-direction: column;
+  padding-top:30px; 
+  }
+  .build {
+  font-size: 4.5rem;
+  line-height: 1.25;
+  text-align: center;
+}
 
   /**********section 5**********/
 
@@ -8,6 +29,14 @@
     height:600px;
   }
 
+
+  h2{
+    position: absolute;
+    color: #042F4B;
+    font-size:3.625rem;
+    text-align:center;
+    font-family: 'Sacramento', cursive;
+  }
   .fifth-container {
     padding:100px;
     display:flex;
@@ -65,6 +94,14 @@
   width: 50px;
 }
 
+.underline-center {
+  text-align: center;
+  margin-left:600px;
+  margin-bottom:1000px;
+  border-bottom: solid 3px #042F4B;
+  align-items: center;
+  width: 50px;
+}
 
 
 /*//////////////coach button/////////*/
@@ -72,7 +109,7 @@
 .coach-button {
     color: black;
     border: none;
-    padding-right:620px;
+    padding-right:600px;
     padding-top: 40px;
     text-align: center;
     border: none;
@@ -88,4 +125,9 @@
     font-weight: bold;
     color:white;
     text-decoration: none;
+}
+
+
+.last-section{
+  padding:100px;
 }
