--- a/views/coaches/career_coach.hbs
+++ b/views/coaches/career_coach.hbs
@@ -1,21 +1,32 @@
     <link rel="stylesheet" href="/stylesheets/coach-details.css" />
 
+<!--Section 1-->
+    <section class="first-section">
+    <div class ="container">
+    <heading>
+        <h1 class="build"> Style coach </h1>
+    <div class="underline-center"></div>
+</heading>
+</section>
+
+
 <section class="fifth-section">
     <div class= "fifth-container">
         <div class="fifth-first-div">
-                <h1>Style coach</h1>
+                <h1>Change your style</h1>
                 <div class="underline"></div>
-        <p>A career coach can help individuals research possible career options
-        and search out job openings that match their career interests and they
-        may work in schools, colleges, government agencies or in private
-        practices.</p>
+        <p>      "A Style Coach can provide many services including personal shopping, closet audits, beauty consultations, style consultations and ongoing seasonal. Discover the ideal wardrobe for your personal style and budget"
+</p>
+
             <div class="coach-button">
 <a class="meet-coach" href="/create-reviews"> See reviews</a>
 </div>
     </div>
 
     <div class="second-div">
-    <img src="/images/style-coach.jpg" alt="Career homepage photo" />
+            <img src="/images/style-coach.jpg" alt="style coach profile photo" />
+
+
     </div>
     </div>
     </div>
@@ -24,20 +35,29 @@
 <section class="fifth-section">
     <div class="fifth-container">
     <div class="second-div">
-        <img src="/images/style_page.jpg" alt= "Style homepage photo"/>
+                <img src="/images/dressing.jpg" alt= "Style coach photo"/>
 </div>
 <div class="fifth-first-div">
-    <h2>Style coach</h2>
+    <h1>Laura Cooper</h1>
     <div class="underline">
 
     </div>
 <p> 
-A Style Coach is more than a Personal Stylist - we are trained as Personal Stylists but also take a fully holistic Style Coaching approach helping people with their inner confidence as well as their outer style as requested. When inner and outer confidence combine together that is when true style shines through!.</p>
-     <div class="coach-button">
+    "I have been a Style Coach for the last 10 years and graduated from ESMOD Paris. I started my career as stylist for BALMAIN and attended several fashion weeks. After an interesting career in fashion, I wanted a new challenge: Helping people feeling better in their daily outfit"</p>
+    <div class="coach-button">
+     
 <a class="meet-coach" href="/book-session"> Book a session </a>
+
 </div>
+
     </div>
 </div>
 </section>
 
+    <section class="last-section">
+    <div class ="container">
+    <heading>
+        <h3> "Wearing high-waisted clothes will improve your figure !" </h3>
+</heading>
+</section>
 
