--- a/views/coaches/career_coach.hbs
+++ b/views/coaches/career_coach.hbs
@@ -1,11 +1,17 @@
     <link rel="stylesheet" href="/stylesheets/coach-details.css" />
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 <!--Section 1-->
+
+
     <section class="first-section">
     <div class ="container">
     <heading>
-        <h1 class="build"> Style coach </h1>
-    <div class="underline-center"></div>
+        
+        <h2>I'm Laura, <p class= "build">Style coach</p>
+</h2>
+        <hr class= "first-hr">
+
 </heading>
 </section>
 
@@ -45,7 +51,6 @@
 <p> 
     "I have been a Style Coach for the last 10 years and graduated from ESMOD Paris. I started my career as stylist for BALMAIN and attended several fashion weeks. After an interesting career in fashion, I wanted a new challenge: Helping people feeling better in their daily outfit"</p>
     <div class="coach-button">
-     
 <a class="meet-coach" href="/book-session"> Book a session </a>
 
 </div>
@@ -54,10 +59,15 @@
 </div>
 </section>
 
-    <section class="last-section">
-    <div class ="container">
-    <heading>
-        <h3> "Wearing high-waisted clothes will improve your figure !" </h3>
-</heading>
-</section>
 
+<hr class= "last-hr">
+<div class="bottom-container">
+        <img class= "quotes" src="/images/quote-left-solid.svg" alt="life goal" />
+        <blockquote class = "blockquote">
+    <h1 id= "quote-h1">Curate Your Colours to Suit Your Skin Tone</h1>
+        </blockquote>
+    </div>
+
+    <div class="bottom2-container">
+    </div>
+    </div>
