--- a/public/stylesheets/coach-details.css
+++ b/public/stylesheets/coach-details.css
@@ -1,22 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
-
 /*****Section 1******/
 
 .first-section {
   height:200px;
   font-family: 'Poppins';
   font-size:20px;
-  background-color:yellow;
+  /*background-color:#ecf0f3;*/
 }
+
+.first-hr {
+  border: dotted #ecf0f3 7px;
+  border-bottom: none;
+  width:4%;
+  margin: 100px auto;
+}
+
+
+
 .container {
   display:flex; 
   flex-direction: column;
-  padding-top:30px; 
   }
+
   .build {
-  font-size: 4.5rem;
-  line-height: 1.25;
+    color: black;
+    display: inline-block;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    font-weight: normal;
   text-align: center;
 }
 
@@ -26,19 +38,20 @@
     font-size:35px;
   }
   .fifth-section{
-    height:600px;
+    height:700px;
   }
 
-
   h2{
-    position: absolute;
     color: #042F4B;
-    font-size:3.625rem;
+    font-size:100px;
     text-align:center;
     font-family: 'Sacramento', cursive;
   }
   .fifth-container {
-    padding:100px;
+    padding-top:100px;
+    padding-bottom: 100px;
+    padding-left:200px;
+    padding-right:200px;
     display:flex;
     flex-basis: 0;
     flex: 1 1 0px;
@@ -66,24 +79,6 @@
   
   /******* 4 div elements*******/
   
-  .last-button {
-    padding-bottom: 100px; 
-    padding-top:30px;
-    margin-right: auto;  
-    margin-left:auto; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .last-button a {
-    background-color:#042F4B;
-    box-shadow:8px 8px 0 #dde1e4;
-    font-weight: bold;
-    color: white;
-    Padding:10px 100px; 
-    text-decoration: none;  
-  }
 
 .fifth-first-div{
   margin:30px;
@@ -94,22 +89,13 @@
   width: 50px;
 }
 
-.underline-center {
-  text-align: center;
-  margin-left:600px;
-  margin-bottom:1000px;
-  border-bottom: solid 3px #042F4B;
-  align-items: center;
-  width: 50px;
-}
-
 
 /*//////////////coach button/////////*/
 
 .coach-button {
     color: black;
     border: none;
-    padding-right:600px;
+    padding-right:400px;
     padding-top: 40px;
     text-align: center;
     border: none;
@@ -129,5 +115,62 @@
 
 
 .last-section{
-  padding:100px;
+  padding:200px;
+  height:400px;
+  font-family: 'Poppins';
+  font-size:20px;
+  background-color:#ecf0f3; 
+}
+
+.bottom-container {
+  background-color: #ecf0f3;
+  position: relative;
+  padding: 150px;
+  text-align: center;
+  font-family: 'Merriweather', serif;
+}
+
+
+#quote-h1 {
+  margin: 50px auto 0 auto;
+  font-family: 'Merriweather', serif;
+  font-size: 50px;
+  color:black;
+}
+
+.last-hr {
+  background-color: white;
+  border: dotted white 6px;
+  border-bottom: none;
+  width:4%;
+  margin: 100px auto;
+}
+
+/*****Blockquote*****/
+.blockquote {
+  padding-left:10px;
+  position: relative;
+}
+
+.blockquote:after {
+  position: absolute;
+  top: 0;
+  content:"Style tips";
+  font-size: 150px;
+  color: rgba(0,0,0,0.1);
+}
+
+
+.bottom2-container {
+  background-color: white;
+  position: relative;
+  padding: 100px;
+  text-align: center;
+  font-family: 'Merriweather', serif;
+}
+.quotes{
+  width: 100px;
+  height: 100px;
+  padding-right: 1000px;
+  padding-bottom:20px;
 }
